--- a/Move.toml
+++ b/Move.toml
@@ -1,10 +1,12 @@
 [package]
 name = "pasatanda_move_smartcontracts"
-edition = "2024"         # edition = "legacy" to use legacy (pre-2024) Move
-# license = ""           # e.g., "MIT", "GPL", "Apache 2.0"
-# authors = ["..."]      # e.g., ["Joe Smith (joesmith@noemail.com)", "John Snow (johnsnow@noemail.com)"]
+edition = "2024"
+license = "MIT"
+authors = ["PasaTanda Team"]
 
 [dependencies]
+Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "framework/testnet" }
 
-# Read more about the package management system options:
-# https://docs.sui.io/guides/developer/sui-101/move-package-management
+[addresses]
+pasatanda_move_smartcontracts = "0x0"
+sui = "0x2"
